22.05.25 Fixed Battery Icon Alignment
니코는 이렇게 안하고도 정렬 잘 되던데 나는 왜 안되는지 모르겠다!

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,14 @@
 
 body {
     font-family: 'Plus Jakarta Sans', sans-serif;
+    margin-top: 0px;
 }
     
 
 .status-bar {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .status-bar__column {
@@ -22,6 +24,7 @@ body {
 .status-bar__column:last-child {
     display:flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .status-bar__column:first-child span {
